--- a/index.html
+++ b/index.html
@@ -8,10 +8,11 @@
     <link href="https://cdn.jsdelivr.net/npm/aos@2.3.4/dist/aos.css" rel="stylesheet">
 </head>
 <body>
+    <button class="theme-toggle" onclick="toggleTheme()">Toggle Theme</button>
     <nav class="navbar">
         <div class="container">
             <div class="logo">
-                <h1>Engineering Solutions</h1>
+                <img src="/static/images/logo.png" alt="Engineering Solutions" height="40">
             </div>
             <div class="nav-links">
                 <a href="#home">Home</a>
