--- a/index.html
+++ b/index.html
@@ -6,15 +6,21 @@
     <title>Engineering Solutions</title>
     <link rel="stylesheet" href="/static/css/style.css">
     <link href="https://cdn.jsdelivr.net/npm/aos@2.3.4/dist/aos.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 </head>
 <body>
-    <button class="theme-toggle" onclick="toggleTheme()">Toggle Theme</button>
+    <button class="theme-toggle" onclick="toggleTheme()">
+        <i class="fas fa-moon"></i>
+    </button>
     <nav class="navbar">
         <div class="container">
             <div class="logo">
                 <img src="/static/images/logo.png" alt="Engineering Solutions" height="40">
             </div>
-            <div class="nav-links">
+            <button class="mobile-menu-btn" onclick="toggleMenu()">
+                <i class="fas fa-bars"></i>
+            </button>
+            <div class="nav-links" id="navLinks">
                 <a href="#home">Home</a>
                 <a href="#products">Products</a>
                 <a href="#partners">Partners</a>
