Assistant checkpoint: Updated navbar style and product cards with local images
Assistant generated file changes:
- static/css/style.css: Update navbar and hero styles, Update nav links color
- static/js/main.js: Update product cards with local images
- index.html: Remove static product cards

---

User prompt:

the navbar and the hero are still in dark mode could you change that?

also the products should be from the images/products and use the file name as the card name

--- a/index.html
+++ b/index.html
@@ -37,30 +37,7 @@
         <div class="container">
             <h2 data-aos="fade-up">Our Products</h2>
             <div class="products-grid">
-                <div class="product-card" data-aos="fade-up">
-                    <img src="https://images.unsplash.com/photo-1523983302122-73e869e1f850" alt="Industrial Robotics">
-                    <h3>Industrial Robotics</h3>
-                </div>
-                <div class="product-card" data-aos="fade-up" data-aos-delay="100">
-                    <img src="https://images.unsplash.com/photo-1496247749665-49cf5b1022e9" alt="Smart Manufacturing">
-                    <h3>Smart Manufacturing System</h3>
-                </div>
-                <div class="product-card" data-aos="fade-up" data-aos-delay="200">
-                    <img src="https://images.unsplash.com/photo-1673201159882-725f2b63dc39" alt="Precision Tools">
-                    <h3>Precision Tools</h3>
-                </div>
-                <div class="product-card" data-aos="fade-up">
-                    <img src="https://images.unsplash.com/photo-1673201159848-a0908cff3ccf" alt="Quality Control">
-                    <h3>Quality Control System</h3>
-                </div>
-                <div class="product-card" data-aos="fade-up" data-aos-delay="100">
-                    <img src="https://images.unsplash.com/photo-1581092580497-e0d23cbdf1dc" alt="Engineering Solutions">
-                    <h3>Engineering Solutions</h3>
-                </div>
-                <div class="product-card" data-aos="fade-up" data-aos-delay="200">
-                    <img src="https://images.unsplash.com/photo-1516937941344-00b4e0337589" alt="Industrial IoT">
-                    <h3>Industrial IoT</h3>
-                </div>
+                <!-- Product cards will be dynamically added by JavaScript -->
             </div>
         </div>
     </section>
