--- a/index.html
+++ b/index.html
@@ -79,6 +79,28 @@
         </div>
     </section>
 
+    <section id="contact" class="contact-section">
+        <div class="container">
+            <h2 data-aos="fade-up">Contact Us</h2>
+            <div class="contact-grid">
+                <div class="contact-info" data-aos="fade-up">
+                    <i class="fas fa-map-marker-alt"></i>
+                    <h3>Address</h3>
+                    <p>123 Engineering Drive<br>Singapore 123456</p>
+                </div>
+                <div class="contact-info" data-aos="fade-up" data-aos-delay="100">
+                    <i class="fas fa-phone"></i>
+                    <h3>Phone</h3>
+                    <p>+65 1234 5678</p>
+                </div>
+                <div class="contact-info" data-aos="fade-up" data-aos-delay="200">
+                    <i class="fas fa-envelope"></i>
+                    <h3>Email</h3>
+                    <p>info@idsg.com</p>
+                </div>
+            </div>
+        </div>
+    </section>
 
     <script src="https://cdn.jsdelivr.net/npm/aos@2.3.4/dist/aos.js"></script>
     <script src="/static/js/main.js"></script>
