--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         <div class="container">
             <div class="about-content" data-aos="fade-up">
                 <h2>About Us</h2>
-                <p>Founded in Singapore in 2013, we are a premier engineering company offering a comprehensive suite of services that drive innovation and excellence across industries. With a state-of-the-art 200-square-meter workshop equipped with advanced machinery—including CNC, milling, laser cutting, bending, and more—we are your trusted partner for all engineering needs, from conceptualization to market-ready production.</p>
+                <p>Established in Singapore in 2013, IDSG has a 200 square meter local workshop, equipped with CNC, milling, lathe, drilling, cutting, laser,  bending, tapping machinery, etc. We are able to provide all kinds of engineering service for you promptly.</p>
                 <p>Our core services include:</p>
                 <ul>
                     <li><strong>Design & Consultation:</strong> Guiding you from the earliest stages of idea conceptualization.</li>
@@ -86,18 +86,29 @@
                 <div class="contact-info" data-aos="fade-up">
                     <i class="fas fa-map-marker-alt"></i>
                     <h3>Address</h3>
-                    <p>123 Engineering Drive<br>Singapore 123456</p>
+                    <p>2 Cleantech Loop, #02-03A<br>JTC launchpad @ JID<br>Singapore 637144</p>
                 </div>
                 <div class="contact-info" data-aos="fade-up" data-aos-delay="100">
                     <i class="fas fa-phone"></i>
-                    <h3>Phone</h3>
-                    <p>+65 1234 5678</p>
+                    <h3>Contact</h3>
+                    <p>Mr Che Jing<br>+65 8100 7631</p>
                 </div>
                 <div class="contact-info" data-aos="fade-up" data-aos-delay="200">
                     <i class="fas fa-envelope"></i>
                     <h3>Email</h3>
-                    <p>info@idsg.com</p>
+                    <p>cj.idsg@gmail.com<br>sales.idsg@gmail.com<br>YDWONG.IDSG@gmail.com</p>
                 </div>
+            </div>
+            <div class="map-container" data-aos="fade-up">
+                <iframe 
+                    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3988.7553776399564!2d103.68266937486735!3d1.3401899986683716!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x31da0fe945f0659d%3A0x9a87e04d89939d2f!2s2%20CleanTech%20Loop%2C%20JTC%20LaunchPad%20%40%20JID%2C%20Singapore%20637144!5e0!3m2!1sen!2ssg!4v1703564530080!5m2!1sen!2ssg" 
+                    width="100%" 
+                    height="450" 
+                    style="border:0;" 
+                    allowfullscreen="" 
+                    loading="lazy" 
+                    referrerpolicy="no-referrer-when-downgrade">
+                </iframe>
             </div>
         </div>
     </section>
