--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
             </div>
             <div class="map-container" data-aos="fade-up">
                 <iframe 
-                    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3988.7553776399564!2d103.68266937486735!3d1.3401899986683716!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x31da0fe945f0659d%3A0x9a87e04d89939d2f!2s2%20CleanTech%20Loop%2C%20JTC%20LaunchPad%20%40%20JID%2C%20Singapore%20637144!5e0!3m2!1sen!2ssg!4v1703564530080!5m2!1sen!2ssg" 
+                    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3988.7553776399564!2d103.68266937486735!3d1.3401899986683716!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x31da0fe945f0659d%3A0x9a87e04d89939d2f!2sJTC+LaunchPad+%40+JID!5e0!3m2!1sen!2ssg!4v1703564530080!5m2!1sen!2ssg&markers=color:red|1.3401899986683716,103.68266937486735" 
                     width="100%" 
                     height="450" 
                     style="border:0;" 
