--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
                 <a href="#products">Products</a>
                 <a href="#partners">Partners</a>
                 <a href="#about">About</a>
+                <a href="#contact">Contact</a>
             </div>
         </div>
     </nav>
@@ -32,26 +33,19 @@
             <p>Your one-stop springboard from academy to industry</p>
         </div>
     </section>
+
     <section id="about" class="section">
         <div class="container">
             <div class="about-content" data-aos="fade-up">
                 <h2>About Us</h2>
-                <p>Established in Singapore in 2013, IDSG has a 200 square meter local workshop, equipped with CNC, milling, lathe, drilling, cutting, laser,  bending, tapping machinery, etc. We are able to provide all kinds of engineering service for you promptly.</p>
+                <p>Established in Singapore in 2013, IDSG has a 200 square meter local workshop, equipped with CNC, milling, lathe, drilling, cutting, laser, bending, tapping machinery, etc. We are able to provide all kinds of engineering service for you promptly.</p>
                 <p>We provide Design & Consultation service since the early stage of your idea conceptualization,</p>
-
                 <p>We provide Simulation & Rapid Prototyping service to verify your technologies,</p>
-
                 <p>We provide Customization service on your component level & system level,</p>
-
                 <p>We provide Scale-Up service from laboratory to industry,</p>
-
-                <p>We provide Production service for the final push to the market.
-    </p>
-
+                <p>We provide Production service for the final push to the market.</p>
                 <p>We serve both Academic and Industrial market, such as universities, research centers, institutes and MNCs & SMEs. </p>
-                <p>                Our business focuses are mainly environmental engineering, precision engineering, civil engineering, thermal & fluidic dynamics, automation & robotics, etc.  </p>
-
-
+                <p>Our business focuses are mainly environmental engineering, precision engineering, civil engineering, thermal & fluidic dynamics, automation & robotics, etc.</p>
             </div>
         </div>
     </section>
@@ -66,7 +60,6 @@
             </div>
         </div>
     </section>
-
 
     <section id="products" class="section">
         <div class="container">
@@ -99,7 +92,7 @@
             </div>
             <div class="map-container" data-aos="fade-up">
                 <iframe 
-                    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3988.7553776399564!2d103.68266937486735!3d1.3401899986683716!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x31da0fe945f0659d%3A0x9a87e04d89939d2f!2sJTC+LaunchPad+%40+JID!5e0!3m2!1sen!2ssg!4v1703564530080!5m2!1sen!2ssg&markers=color:red|1.3401899986683716,103.68266937486735" 
+                    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3988.7553776399564!2d103.68266937486735!3d1.3401899986683716!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x31da0fe945f0659d%3A0x9a87e04d89939d2f!2s2%20Cleantech%20Loop%2C%20JTC%20CleanTech%20Two%2C%20Singapore%20637144!5e0!3m2!1sen!2ssg!4v1703564530080!5m2!1sen!2ssg" 
                     width="100%" 
                     height="450" 
                     style="border:0;" 
