--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <nav class="navbar">
         <div class="container">
             <div class="logo">
-                <img src="/static/images/logo.png" alt="Engineering Solutions" height="40">
+                <img src="/static/images/logo.png" alt="Engineering Solutions" >
             </div>
             <button class="mobile-menu-btn" onclick="toggleMenu()">
                 <i class="fas fa-bars"></i>
@@ -70,7 +70,7 @@
 
     <section id="products" class="section">
         <div class="container">
-            <h2 data-aos="fade-up">Our Products</h2>
+            <h2 data-aos="fade-up">Our Projects</h2>
             <div class="products-grid">
                 <!-- Product cards will be dynamically added by JavaScript -->
             </div>
@@ -89,12 +89,12 @@
                 <div class="contact-info" data-aos="fade-up" data-aos-delay="100">
                     <i class="fas fa-phone"></i>
                     <h3>Contact</h3>
-                    <p>Mr Che Jing<br>+65 8100 7631</p>
+                    <p>Mr Che Jing<br>+65 8862 4820</p>
                 </div>
                 <div class="contact-info" data-aos="fade-up" data-aos-delay="200">
                     <i class="fas fa-envelope"></i>
                     <h3>Email</h3>
-                    <p>cj.idsg@gmail.com<br>sales.idsg@gmail.com<br>YDWONG.IDSG@gmail.com</p>
+                    <p>cj.idsg@gmail.com<br>YDWONG.IDSG@gmail.com</p>
                 </div>
             </div>
             <div class="map-container" data-aos="fade-up">
